Cyberduck
https://cyberduck.io/

6.9.0
- [Localize] Estonian Localization
- [Feature] Default connection profile for Microsoft Sharepoint Online (#10115)
- [Feature] Support for eu-west-3 (Stockholm) region (S3)
- [Feature] Improve listing performance for versioned buckets (S3) (#10426)
- [Feature] Add --profile option to select connection profile (CLI)
- [Bugfix] Stop button to interrupt transfer (#10363)
- [Bugfix] Save passphrase for private key in keychain only after successful connect (#10526)
- [Bugfix] Failure authenticating with proxy using Integrated Windows Authentication (IWA) authentication (WebDAV, Windows)
- [Bugfix] Updated localizations

6.8.3
- [Bugfix] Refinements to dark mode (macOS) (#10508, #10510)
- [Bugfix] Failure running script in Terminal. Not authorized to send Apple events to Terminal (macOS) (#10475)
- [Bugfix] Upload action not enabled when server is not returning permission mask (FTP) (#10506)
- [Bugfix] Large uploads requiring checksum of parts fail with network timeout (#10516)

6.8.2
- [Bugfix] Failure transferring more than one file (FTP) (#10494)

6.8.1
- [Bugfix] Interoperability with OpenStack Swift (S3 middleware) (#10471)
- [Bugfix] Failure opening Terminal.app (#10475)
- [Bugfix] Crash when dragging multiple files (macOS) (#10479)
- [Bugfix] Add One Zone-Infrequent Access storage class (S3) (#10481)
- [Bugfix] Improvements to dark mode (macOS) (#10486)
- [Bugfix] Smart card insert prompt displayed when opening connection (Windows) (#8595)

6.8.0
- [Feature] Support dark mode (macOS Mojave) (#10348)
- [Bugfix] Display scaling is broken for some input components (Windows) (#10443)
- [Bugfix] Missing session token when making the AssumeRoleRequest to obtain the cross account credentials from STS (S3) (#10432)
- [Bugfix] Interoperability with AWS Snowball (S3) (#10458)
- [Bugfix] No modification date displayed (Rackspace Cloudfiles) (#10446)

6.7.1
- [Bugfix] Failure uploading to OneDrive Deutschland (OneDrive)